Fix x-overlay being behind image

--- a/react-frontend/src/css/GridImage.css
+++ b/react-frontend/src/css/GridImage.css
@@ -1,3 +1,21 @@
-.Image {
+.GridImage {
     position: relative; 
+}
+
+img {
+    max-width: 45vw;
+}
+
+img.x-overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    filter: opacity(0);
+    z-index: 1;
+}
+
+div.rogue > img.x-overlay {
+    filter: opacity(1);
 }
